src/elements/teaser/teaser.scss
@use '../core/styles' as sbb;

:host {
  display: inline-block;

  // Use !important here to not interfere with Firefox focus ring definition
  // which appears in normalize CSS of several frameworks.
  outline: none !important;

  --sbb-teaser-scale-hover: 1.02;
  --sbb-teaser-description-color: light-dark(var(--sbb-color-granite), var(--sbb-color-silver));
  --sbb-teaser-flex-direction: row;
  --sbb-teaser-align-items: center;
  --sbb-teaser-gap: var(--sbb-spacing-fixed-4x);
  --sbb-teaser-border-radius: var(--sbb-border-radius-4x);

  @include sbb.if-forced-colors {
    --sbb-teaser-description-color: LinkText;
    --sbb-title-text-color-normal-override: LinkText !important;
  }
}

:host([alignment='after']) {
  --sbb-teaser-align-items: start;
}

:host([alignment='below']) {
  --sbb-teaser-flex-direction: column;
  --sbb-teaser-align-items: baseline;
  --sbb-teaser-gap: var(--sbb-spacing-fixed-3x);
}

@include sbb.hover-mq($hover: true) {
  :host(:hover) {
    --sbb-teaser-scale: var(--sbb-teaser-scale-hover);
  }
}

.sbb-teaser__wrapper {
  display: flex;
  position: relative;
  cursor: var(--sbb-cursor-pointer);

  @include sbb.zero-width-space;
}

.sbb-teaser {
  text-decoration: none;
  position: absolute;
  inset: 0;

  &:focus-visible {
    @include sbb.focus-outline;

    border-radius: var(--sbb-teaser-border-radius);

    // We move the focus outline further out to not overlap with the teaser border in forced colors
    @include sbb.if-forced-colors {
      outline-offset: calc(2 * var(--sbb-focus-outline-offset));
    }
  }

  @include sbb.if-forced-colors {
    &::before {
      content: '';
      position: absolute;
      inset: calc(-1 * var(--sbb-focus-outline-offset));
      pointer-events: none;
      border-radius: calc(var(--sbb-teaser-border-radius) + var(--sbb-focus-outline-offset));
      border: var(--sbb-border-width-1x) solid CanvasText;
    }
  }
}

.sbb-teaser__container {
  display: flex;
  flex-flow: var(--sbb-teaser-flex-direction) nowrap;
  align-items: var(--sbb-teaser-align-items);
  gap: var(--sbb-teaser-gap);
  max-width: 100%;
  width: 100%;
  pointer-events: none;
}

.sbb-teaser__text {
  @include sbb.text-s--regular;

  color: var(--sbb-teaser-description-color);
  overflow: hidden;
  max-width: 100%;
}

::slotted([slot='image']) {
  width: #{sbb.px-to-rem-build(300)};
  display: block;
}

.sbb-teaser__image-wrapper {
  flex-shrink: 0;
  overflow: hidden;
  border-radius: var(--sbb-teaser-border-radius);
  transition: box-shadow var(--sbb-teaser-image-animation-duration) var(--sbb-animation-easing);

  @include sbb.hover-mq($hover: true) {
    :host(:hover) & {
      box-shadow: var(--sbb-box-shadow-level-9-hard);
    }
  }
}

.sbb-teaser__description {
  // Reset paragraph styles
  display: inline-block;
  margin: 0;
  padding: 0;
}

::slotted(sbb-chip-label) {
  display: block;
  max-width: fit-content;
  margin-block-end: var(--sbb-spacing-fixed-1x);
}

::slotted(sbb-title) {
  margin-block: 0;
}

